--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vitest": "^1.0.0"
   },
   "dependencies": {
+    "@solidjs/meta": "^0.29.4",
     "d3-geo": "^3.1.0",
     "d3-selection": "^3.0.0",
     "d3-zoom": "^3.0.0",
