--- a/package.json
+++ b/package.json
@@ -3,6 +3,22 @@
   "version": "1.0.0",
   "description": "An svg map chart component built for SolidJS",
   "type": "module",
+  "keywords": [
+    "solidjs",
+    "maps",
+    "svg",
+    "charts",
+    "dataviz",
+    "topojson",
+    "geo"
+  ],
+  "author": "dstepanek",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/stepad10/solidjs-simple-maps.git"
+  },
+  "sideEffects": false,
   "files": [
     "dist"
   ],
