--- a/package.json
+++ b/package.json
@@ -1,68 +1,79 @@
 {
-  "name": "solidjs-simple-maps",
-  "version": "1.0.0",
-  "description": "An svg map chart component built for SolidJS",
-  "type": "module",
-  "keywords": [
-    "solidjs",
-    "maps",
-    "svg",
-    "charts",
-    "dataviz",
-    "topojson",
-    "geo"
-  ],
-  "author": "dstepanek",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/stepad10/solidjs-simple-maps.git"
-  },
-  "sideEffects": false,
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
+    "name": "solidjs-simple-maps",
+    "version": "1.0.0",
+    "description": "An svg map chart component built for SolidJS",
+    "type": "module",
+    "keywords": [
+        "solidjs",
+        "maps",
+        "svg",
+        "charts",
+        "dataviz",
+        "topojson",
+        "geo"
+    ],
+    "author": "dstepanek",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/stepad10/solidjs-simple-maps.git"
+    },
+    "sideEffects": false,
+    "files": [
+        "dist"
+    ],
+    "main": "./dist/index.cjs",
+    "module": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs",
+            "types": "./dist/index.d.ts"
+        }
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "test": "vitest",
+        "type-check": "tsc --noEmit",
+        "lint": "eslint .",
+        "format": "prettier --write ."
+    },
+    "peerDependencies": {
+        "solid-js": "^1.0.0"
+    },
+    "devDependencies": {
+        "@solidjs/testing-library": "^0.8.10",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@types/d3-geo": "^3.0.0",
+        "@types/d3-selection": "^3.0.0",
+        "@types/d3-zoom": "^3.0.0",
+        "@types/node": "^20.0.0",
+        "@types/topojson-client": "^3.0.0",
+        "@typescript-eslint/eslint-plugin": "^8.53.1",
+        "@typescript-eslint/parser": "^8.53.1",
+        "eslint": "^9.39.2",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.5",
+        "eslint-plugin-solid": "^0.14.5",
+        "globals": "^17.1.0",
+        "happy-dom": "^20.3.7",
+        "jsdom": "^23.0.0",
+        "prettier": "^3.8.1",
+        "solid-js": "^1.8.0",
+        "typescript": "^5.0.0",
+        "typescript-eslint": "^8.53.1",
+        "vite": "^5.0.0",
+        "vite-plugin-dts": "^4.5.4",
+        "vite-plugin-solid": "^2.8.0",
+        "vitest": "^1.0.0"
+    },
+    "dependencies": {
+        "@solidjs/meta": "^0.29.4",
+        "d3-geo": "^3.1.0",
+        "d3-selection": "^3.0.0",
+        "d3-zoom": "^3.0.0",
+        "topojson-client": "^3.1.0"
     }
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "test": "vitest",
-    "type-check": "tsc --noEmit"
-  },
-  "peerDependencies": {
-    "solid-js": "^1.0.0"
-  },
-  "devDependencies": {
-    "@solidjs/testing-library": "^0.8.10",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@types/d3-geo": "^3.0.0",
-    "@types/d3-selection": "^3.0.0",
-    "@types/d3-zoom": "^3.0.0",
-    "@types/node": "^20.0.0",
-    "@types/topojson-client": "^3.0.0",
-    "happy-dom": "^20.3.7",
-    "jsdom": "^23.0.0",
-    "solid-js": "^1.8.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "vite-plugin-dts": "^4.5.4",
-    "vite-plugin-solid": "^2.8.0",
-    "vitest": "^1.0.0"
-  },
-  "dependencies": {
-    "@solidjs/meta": "^0.29.4",
-    "d3-geo": "^3.1.0",
-    "d3-selection": "^3.0.0",
-    "d3-zoom": "^3.0.0",
-    "topojson-client": "^3.1.0"
-  }
 }
