--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@types/topojson-client": "^3.0.0",
         "@typescript-eslint/eslint-plugin": "^8.53.1",
         "@typescript-eslint/parser": "^8.53.1",
+        "@vitest/coverage-v8": "1.6.1",
         "eslint": "^9.39.2",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.5",
