docs: fix instructions and add examples
- Fix README imports for MetaProvider (requires @solidjs/meta)
- Update installation instructions
- Create examples/ directory with Basic, Zoomable, and Metadata map examples
- Add examples/tsconfig.json for isolated example compilation
- Create tsconfig.build.json for clean production builds
- Update vite.config.ts to use build config for dts generation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,22 @@
         "esModuleInterop": true,
         "jsx": "preserve",
         "jsxImportSource": "solid-js",
-        "types": ["vite/client", "vitest/globals"],
+        "types": [
+            "vite/client",
+            "vitest/globals"
+        ],
         "noEmit": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "paths": {
+            "solidjs-simple-maps": [
+                "./src/index.ts"
+            ]
+        }
     },
-    "include": ["src", "tests", "dev"]
+    "include": [
+        "src",
+        "tests",
+        "dev",
+        "examples"
+    ]
 }
