--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
         "test": "vitest",
         "type-check": "tsc --noEmit",
         "lint": "eslint .",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "prepublishOnly": "npm run build",
+        "release": "npm publish --provenance --access public"
     },
     "peerDependencies": {
         "solid-js": "^1.0.0"
     },
     "devDependencies": {
+        "@changesets/cli": "^2.29.8",
         "@solidjs/testing-library": "^0.8.10",
         "@testing-library/jest-dom": "^6.9.1",
         "@types/d3-geo": "^3.0.0",
