chore: setup formatting enforcement and fix build environment
- Downgraded typescript to 5.7.3 to fix API Extractor warning in build
- Installed husky and lint-staged for pre-commit formatting
- Added .husky/pre-commit hook
- Formatted entire codebase with Prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,22 +8,12 @@
         "esModuleInterop": true,
         "jsx": "preserve",
         "jsxImportSource": "solid-js",
-        "types": [
-            "vite/client",
-            "vitest/globals"
-        ],
+        "types": ["vite/client", "vitest/globals"],
         "noEmit": true,
         "skipLibCheck": true,
         "paths": {
-            "solidjs-simple-maps": [
-                "./src/index.ts"
-            ]
+            "solidjs-simple-maps": ["./src/index.ts"]
         }
     },
-    "include": [
-        "src",
-        "tests",
-        "dev",
-        "examples"
-    ]
+    "include": ["src", "tests", "dev", "examples"]
 }
