--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "lint": "eslint .",
         "format": "prettier --write .",
         "prepublishOnly": "npm run build",
-        "release": "npm publish --provenance --access public"
+        "release": "npm publish --provenance --access public",
+        "prepare": "husky"
     },
     "peerDependencies": {
         "solid-js": "^1.0.0"
@@ -63,10 +64,12 @@
         "eslint-plugin-solid": "^0.14.5",
         "globals": "^17.1.0",
         "happy-dom": "^20.3.7",
+        "husky": "^9.1.7",
         "jsdom": "^23.0.0",
+        "lint-staged": "^16.2.7",
         "prettier": "^3.8.1",
         "solid-js": "^1.8.0",
-        "typescript": "^5.0.0",
+        "typescript": "^5.7.3",
         "typescript-eslint": "^8.53.1",
         "vite": "^5.0.0",
         "vite-plugin-dts": "^4.5.4",
@@ -79,5 +82,8 @@
         "d3-selection": "^3.0.0",
         "d3-zoom": "^3.0.0",
         "topojson-client": "^3.1.0"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx,json,css,md}": "prettier --write"
     }
 }
