--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -3,11 +3,6 @@
     "compilerOptions": {
         "noEmit": false
     },
-    "include": [
-        "src"
-    ],
-    "exclude": [
-        "src/**/*.test.ts",
-        "src/**/*.test.tsx"
-    ]
+    "include": ["src"],
+    "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
 }
