--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,13 +1,17 @@
 name: Publish
 
 on:
-    push:
+    workflow_run:
+        workflows: ["CI"]
         branches: ["main"]
+        types:
+            - completed
 
 jobs:
     release:
         name: Release
         runs-on: ubuntu-latest
+        if: ${{ github.event.workflow_run.conclusion == 'success' }}
         permissions:
             contents: write
             pull-requests: write
