--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     },
     "devDependencies": {
         "@changesets/cli": "^2.29.8",
+        "@eslint/js": "^9.39.2",
         "@solidjs/testing-library": "^0.8.10",
         "@testing-library/jest-dom": "^6.9.1",
         "@types/d3-geo": "^3.0.0",
