--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
         "@types/d3-geo": "^3.0.0",
         "@types/d3-selection": "^3.0.0",
         "@types/d3-zoom": "^3.0.0",
+        "@types/geojson": "^7946.0.16",
         "@types/node": "^20.0.0",
         "@types/topojson-client": "^3.0.0",
+        "@types/topojson-specification": "^1.0.5",
         "@typescript-eslint/eslint-plugin": "^8.53.1",
         "@typescript-eslint/parser": "^8.53.1",
         "@vitest/coverage-v8": "1.6.1",
