--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,17 @@ on:
     pull_request:
         branches: ["main"]
 
+concurrency:
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
+
 jobs:
     quality-check:
-        name: Quality Check
+        name: Quality Check (${{ matrix.node-version }})
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: [18, 20, 22]
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -22,7 +29,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 20
+                  node-version: ${{ matrix.node-version }}
                   cache: "pnpm"
 
             - name: Install dependencies
