--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,8 @@
 name: Publish
 
 on:
-    workflow_run:
-        workflows: ["CI"]
+    push:
         branches: ["main"]
-        types:
-            - completed
 
 permissions:
     contents: write
@@ -16,7 +13,6 @@ jobs:
     release:
         name: Release
         runs-on: ubuntu-latest
-        if: ${{ github.event.workflow_run.conclusion == 'success' }}
         steps:
             - name: Checkout
               uses: actions/checkout@v4
