--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,7 @@ jobs:
               uses: changesets/action@v1
               with:
                   # This executes the actual publish command when the Version Packages PR is merged
-                  publish: npm run release
+                  publish: pnpm run release
                   commit: "chore: version packages"
                   title: "chore: version packages"
               env:
