--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
         "type-check": "tsc --noEmit",
         "lint": "eslint .",
         "format": "prettier --write .",
-        "prepublishOnly": "npm run build",
-        "release": "npm publish --provenance --access public",
+        "prepublishOnly": "pnpm run build",
+        "release": "changeset publish",
         "prepare": "husky"
     },
     "peerDependencies": {
